# infermark

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark_endpoint.py  compare_backends.py  export_results.py
scripts/: generate_assets.py
src/infermark/: __init__.py  _types.py  backends.py  cli.py  client.py  compare.py  histogram.py  load.py  report.py  runner.py
tests/: test_backends.py  test_cli.py  test_client.py  test_compare.py  test_csv_export.py  test_histogram.py  test_load.py  test_percentiles.py  test_report.py  test_runner.py  test_types.py
