[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infermark"
version = "0.3.0"
description = "Benchmark any OpenAI-compatible LLM endpoint. TTFT, inter-token latency, throughput, P50-P99 — in one command."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{ name = "Zacharie Bhatti" }]
keywords = [
    "llm",
    "benchmark",
    "inference",
    "latency",
    "throughput",
    "vllm",
    "tgi",
    "ollama",
    "performance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]
all = ["infermark[cli]"]

[project.scripts]
infermark = "infermark.cli:main"

[project.urls]
Homepage = "https://github.com/stef41/infermark"
Repository = "https://github.com/stef41/infermark"
Issues = "https://github.com/stef41/infermark/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/infermark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
